# parallel-programming

./: .clang-format  .gitignore  README.md
lw1/: CMakeLists.txt  main.cpp
lw2/: CMakeLists.txt  main.cpp
lw2/src/: BmpLoader.h  BmpProcessor.h
lw3/: CMakeLists.txt  main.cpp
lw3/streams/: CMakeLists.txt
lw3/streams/src/decorators/: DecryptionInputStream.h  EncryptionOutputStream.h  EncryptionTable.h  InputStreamDecorator.h  OutputStreamDecorator.h
lw3/streams/src/parse/: CommandLineParser.cpp  CommandLineParser.h
lw3/streams/src/streams/: IInputDataStream.h  IOutputDataStream.h  MemoryInputStream.cpp  MemoryInputStream.h  MemoryOutputStream.cpp  MemoryOutputStream.h
lw3/streams/tests/: StreamsTests.cpp
lw4/: CMakeLists.txt  main.cpp
lw4/src/: BmpProcessor.h
lw5/: CMakeLists.txt  main.cpp  start.bat
lw5/results/: critical_section_double.txt  critical_section_single.txt  mutex_double.txt  mutex_single.txt  nosync_double.txt  nosync_single.txt
lw6/: CMakeLists.txt  pi_calculator.cpp
lw7/: TaskExamples.sln
lw7/AsyncWriter/: Program.cs  Test.txt
lw7/ImageLoader/: Program.cs
